# xiaomi-miloco

./: README.md  README.zh_Hans.md
config/: ai_engine_config.yaml  server_config.yaml
docs/: environment-setup-macos.md  environment-setup-macos_zh-Hans.md  environment-setup.md  environment-setup_zh-Hans.md
docs/development/: developer-setup.md  developer-setup_zh_Hans.md
miloco_ai_engine/config/: config_info.py  config_optimizer.py
miloco_ai_engine/core/: CMakeLists.txt
miloco_ai_engine/core/batch_scheduling/: scheduler_task_info.h
miloco_server/config/: normal_config.py
miloco_server/proxy/: miot_proxy.py
miloco_server/service/: miot_service.py
miloco_server/tools/: rule_create_tool.py
miloco_server/utils/: carmera_vision_handler.py  default_action.py
miot_kit/miot/: lan.py  rtsp_camera.py  rtsp_server.py
miot_kit/miot/libs/darwin/arm64/: libcamera_rtsp.dylib
scripts/: ai_engine_metal_build.sh
web_ui/src/: App.jsx
web_ui/src/locales/: en.js  zh.js
web_ui/src/pages/Error/: Error500.jsx
